--- a/createx/index.html
+++ b/createx/index.html
@@ -926,9 +926,12 @@
                                         Lesson 1. <p>Aliquet lectus urna viverra in odio.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
@@ -937,9 +940,12 @@
                                         Lesson 2. <p>Orci commodo, viverra orci mollis ut euismod.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
@@ -948,9 +954,12 @@
                                         Lesson 3. <p>Sagittis vitae facilisi rutrum amet mauris quisque vel.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
@@ -959,9 +968,12 @@
                                         Lesson 4. <p>In id dolor quis nunc, urna hendrerit pharetra.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
@@ -970,9 +982,12 @@
                                         Lesson 5. <p>Est, ut tempus id rutrum facilisi.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
@@ -981,9 +996,12 @@
                                         Lesson 6. <p>Amet nec in pellentesque.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
@@ -992,9 +1010,12 @@
                                         Lesson 7. <p>Massa vel arcu mauris, id vel rhoncus mattis quis.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
@@ -1003,67 +1024,33 @@
                                         Lesson 8. <p>Neque, cursus sapien nullam id.</p>
                                     </div>
                                     <div class="accordion__body">
-                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim,
-                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit
-                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
+                                        Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec
+                                        enim,
+                                        ornare. Lacus facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio
+                                        mi suscipit
+                                        sed. Curabitur faucibus porttitor quis sem lacus, arcu feugiat facilisis.
+                                        Commodo nunc orci
                                         vitae accumsan id.
                                     </div>
                                 </div>
 
 
 
+                              
 
 
-<!--                             
-                            <ul class="program__lessons">
-                                <li class="program__lesson-number program__lesson-number--minus">Lesson 1.<p>Aliquet
-                                        lectus urna viverra in
-                                        odio.</p>
-                                </li>
+                            </div>
 
-                                <span class="program__lesson-paragraph">Nulla amet, sagittis potenti rhoncus sit. Elit
-                                    lectus nec pulvinar
-                                    aliquet donec enim, ornare. Lacus facilisi curabitur turpis varius
-                                    mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur faucibus
-                                    porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci
-                                    vitae accumsan id.</span>
-                                <li class="program__lesson-number">Lesson 2.
-                                    <p>Orci commodo, viverra orci mollis ut euismod.</p>
-                                </li>
-                                <li class="program__lesson-number">Lesson 3.
-                                    <p>Sagittis vitae facilisi rutrum amet mauris quisque vel.</p>
-                                </li>
-                                <li class="program__lesson-number">Lesson 4.
-                                    <p>In id dolor quis nunc, urna hendrerit pharetra.</p>
-                                </li>
-                                <li class="program__lesson-number">Lesson 5.
-                                    <p>Est, ut tempus id rutrum facilisi.</p>
-                                </li>
-                                <li class="program__lesson-number">Lesson 6.
-                                    <p>Amet nec in pellentesque.</p>
-                                </li>
-                                <li class="program__lesson-number">Lesson 7.
-                                    <p>Massa vel arcu mauris, id vel rhoncus mattis quis.</p>
-                                </li>
-                                <li class="program__lesson-number">Lesson 8.
-                                    <p>Neque, cursus sapien nullam id.</p>
-                                </li>
-                            </ul> -->
-
-
-
-
-                            <!-- <div class="program__image-box">
+                            <div class="program__image-box">
                                 <img src="images/program-img.svg" alt="program image">
-                            </div> -->
+                            </div>
 
 
 
                         </div>
                     </div>
-                </div>
 
-                
+
 
             </section>
 
