--- a/createx/index.html
+++ b/createx/index.html
@@ -1033,26 +1033,63 @@
                                         vitae accumsan id.
                                     </div>
                                 </div>
-
-
-
-                              
-
-
                             </div>
 
                             <div class="program__image-box">
                                 <img src="images/program-img.svg" alt="program image">
                             </div>
-
-
-
                         </div>
                     </div>
-
-
-
             </section>
+
+
+            <section class="main__blog blog">
+                <div class="container">
+                    <div class="blog__inner">
+                        <div class="blog__wrapper">
+                            <div class="blog__heading heading">
+                                <p class="heading__subtitle">Our blog</p>
+                                <h2 class="heading__title">
+                                    Latest posts
+                                </h2>
+                            </div>
+
+                            <div class="blog__btn-box">
+                                <a class="about__btn button" href="#"> Go to blog</a>
+                            </div>
+                        </div>
+                        <div class="blog__content">
+                            <div class="blog__podcast">
+                                <img src="images/blog/1.jpg" alt="">
+                                <ul class="blog__captions">
+                                    <li class="mark">Marketing</li>
+                                    <!-- <li><img src="images/icons/divider.svg" alt=""></li>
+                                    <li><img src="images/icons/calendar-icon.svg" alt=""></li> -->
+                                    <li>September 4, 2020</li>
+                                    <li><img src="images/icons/divider.svg" alt=""></li>
+                                    <li><img src="images/icons/clock-icon.svg" alt=""></li>
+                                    <li>36 min</li>
+                                </ul>
+                                <div class="blog__content-text">
+                                    <p>What is traffic arbitrage and does it really make money?</p>
+                                    <span>Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin
+                                        dignissim lacus, purus gravida...</span>
+                                      <a href="#"> <div class="directions__link-btn">Listen</div></a> 
+                                </div>
+
+
+                            </div>
+                            <div class="blog__video">
+                                <img src="images/blog/2.jpg" alt="">
+
+
+                            </div>
+                            <div class="blog__article">
+                                <img src="images/blog/3.jpg" alt="">
+
+
+                            </div>
+                        </div>
 
         </main>
 
