work on podcast

--- a/createx/index.html
+++ b/createx/index.html
@@ -1062,33 +1062,110 @@
                             <div class="blog__podcast">
                                 <img src="images/blog/1.jpg" alt="">
                                 <ul class="blog__captions">
-                                    <li class="mark">Marketing</li>
-                                    <!-- <li><img src="images/icons/divider.svg" alt=""></li>
-                                    <li><img src="images/icons/calendar-icon.svg" alt=""></li> -->
-                                    <li>September 4, 2020</li>
-                                    <li><img src="images/icons/divider.svg" alt=""></li>
-                                    <li><img src="images/icons/clock-icon.svg" alt=""></li>
-                                    <li>36 min</li>
+                                    <li>Marketing</li>
+                                    <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <line x1="0.5" y1="2" x2="0.5" y2="13" stroke="#787A80"
+                                                stroke-linecap="round" />
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M17.0002 0.333984C17.3684 0.333984 17.6668 0.632461 17.6668 1.00065V1.33399L22.3335 1.334V1.00065C22.3335 0.632462 22.632 0.333985 23.0002 0.333984C23.3684 0.333984 23.6668 0.632461 23.6668 1.00065V1.334L24.5002 1.33401C25.9729 1.33401 27.1668 2.52792 27.1668 4.00067V12.0006C27.1668 13.4734 25.9729 14.6673 24.5002 14.6673L15.5002 14.6673C14.0274 14.6673 12.8335 13.4734 12.8335 12.0007L12.8335 5.50078L12.8335 4.00065C12.8335 2.52789 14.0274 1.33398 15.5002 1.33399L16.3335 1.33399V1.00065C16.3335 0.632461 16.632 0.333984 17.0002 0.333984ZM16.3335 2.66732L15.5002 2.66732C14.7638 2.66732 14.1668 3.26427 14.1668 4.00065V4.83398H25.8335V4.00067C25.8335 3.26429 25.2365 2.66734 24.5002 2.66734L23.6668 2.66734V3.00065C23.6668 3.36884 23.3684 3.66732 23.0002 3.66732C22.632 3.66732 22.3335 3.36884 22.3335 3.00065V2.66734L17.6668 2.66733V3.00065C17.6668 3.36884 17.3684 3.66732 17.0002 3.66732C16.632 3.66732 16.3335 3.36884 16.3335 3.00065V2.66732ZM25.8335 6.16732H14.1668L14.1668 12.0007C14.1668 12.737 14.7638 13.334 15.5002 13.334L24.5002 13.334C25.2365 13.334 25.8335 12.737 25.8335 12.0006V6.16732Z"
+                                                fill="#787A80" />
+                                        </svg>
+                                    </li>
+
+                                    <li class="blog__captions-data">September 4, 2020</li>
+                                    <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <line x1="0.5" y1="2" x2="0.5" y2="13" stroke="#787A80"
+                                                stroke-linecap="round" />
+                                            <path
+                                                d="M20.6665 3.83268C20.6665 3.46449 20.368 3.16602 19.9998 3.16602C19.6316 3.16602 19.3332 3.46449 19.3332 3.83268V7.49935C19.3332 7.67616 19.4034 7.84573 19.5284 7.97075L21.5284 9.97075C21.7888 10.2311 22.2109 10.2311 22.4712 9.97075C22.7316 9.7104 22.7316 9.28829 22.4712 9.02794L20.6665 7.22321V3.83268Z"
+                                                fill="#787A80" />
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M19.9998 0.166016C15.9497 0.166016 12.6665 3.44926 12.6665 7.49935C12.6665 11.5494 15.9497 14.8327 19.9998 14.8327C24.0499 14.8327 27.3332 11.5494 27.3332 7.49935C27.3332 3.44926 24.0499 0.166016 19.9998 0.166016ZM13.9998 7.49935C13.9998 4.18564 16.6861 1.49935 19.9998 1.49935C23.3135 1.49935 25.9998 4.18564 25.9998 7.49935C25.9998 10.8131 23.3135 13.4993 19.9998 13.4993C16.6861 13.4993 13.9998 10.8131 13.9998 7.49935Z"
+                                                fill="#787A80" />
+                                        </svg>
+
+                                    </li>
+                                    <li class="blog__captions-clock">36 min</li>
                                 </ul>
                                 <div class="blog__content-text">
                                     <p>What is traffic arbitrage and does it really make money?</p>
                                     <span>Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin
                                         dignissim lacus, purus gravida...</span>
-                                      <a href="#"> <div class="directions__link-btn">Listen</div></a> 
+                                    <a href="#">
+                                        <div class="directions__link-btn">Listen</div>
+                                    </a>
                                 </div>
-
-
                             </div>
-                            <div class="blog__video">
+                            <div class="blog__podcast">
                                 <img src="images/blog/2.jpg" alt="">
+                                
+                                <ul class="blog__captions">
+                                    <li>Management</li>
+                                    <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <line x1="0.5" y1="2" x2="0.5" y2="13" stroke="#787A80"
+                                                stroke-linecap="round" />
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M17.0002 0.333984C17.3684 0.333984 17.6668 0.632461 17.6668 1.00065V1.33399L22.3335 1.334V1.00065C22.3335 0.632462 22.632 0.333985 23.0002 0.333984C23.3684 0.333984 23.6668 0.632461 23.6668 1.00065V1.334L24.5002 1.33401C25.9729 1.33401 27.1668 2.52792 27.1668 4.00067V12.0006C27.1668 13.4734 25.9729 14.6673 24.5002 14.6673L15.5002 14.6673C14.0274 14.6673 12.8335 13.4734 12.8335 12.0007L12.8335 5.50078L12.8335 4.00065C12.8335 2.52789 14.0274 1.33398 15.5002 1.33399L16.3335 1.33399V1.00065C16.3335 0.632461 16.632 0.333984 17.0002 0.333984ZM16.3335 2.66732L15.5002 2.66732C14.7638 2.66732 14.1668 3.26427 14.1668 4.00065V4.83398H25.8335V4.00067C25.8335 3.26429 25.2365 2.66734 24.5002 2.66734L23.6668 2.66734V3.00065C23.6668 3.36884 23.3684 3.66732 23.0002 3.66732C22.632 3.66732 22.3335 3.36884 22.3335 3.00065V2.66734L17.6668 2.66733V3.00065C17.6668 3.36884 17.3684 3.66732 17.0002 3.66732C16.632 3.66732 16.3335 3.36884 16.3335 3.00065V2.66732ZM25.8335 6.16732H14.1668L14.1668 12.0007C14.1668 12.737 14.7638 13.334 15.5002 13.334L24.5002 13.334C25.2365 13.334 25.8335 12.737 25.8335 12.0006V6.16732Z"
+                                                fill="#787A80" />
+                                        </svg>
+                                    </li>
 
+                                    <li class="blog__captions-data">August 25, 2020</li>
+                                    <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <line x1="0.5" y1="2" x2="0.5" y2="13" stroke="#787A80"
+                                                stroke-linecap="round" />
+                                            <path
+                                                d="M20.6665 3.83268C20.6665 3.46449 20.368 3.16602 19.9998 3.16602C19.6316 3.16602 19.3332 3.46449 19.3332 3.83268V7.49935C19.3332 7.67616 19.4034 7.84573 19.5284 7.97075L21.5284 9.97075C21.7888 10.2311 22.2109 10.2311 22.4712 9.97075C22.7316 9.7104 22.7316 9.28829 22.4712 9.02794L20.6665 7.22321V3.83268Z"
+                                                fill="#787A80" />
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M19.9998 0.166016C15.9497 0.166016 12.6665 3.44926 12.6665 7.49935C12.6665 11.5494 15.9497 14.8327 19.9998 14.8327C24.0499 14.8327 27.3332 11.5494 27.3332 7.49935C27.3332 3.44926 24.0499 0.166016 19.9998 0.166016ZM13.9998 7.49935C13.9998 4.18564 16.6861 1.49935 19.9998 1.49935C23.3135 1.49935 25.9998 4.18564 25.9998 7.49935C25.9998 10.8131 23.3135 13.4993 19.9998 13.4993C16.6861 13.4993 13.9998 10.8131 13.9998 7.49935Z"
+                                                fill="#787A80" />
+                                        </svg>
 
+                                    </li>
+                                    <li class="blog__captions-clock">45 min</li>
+                                </ul>
+                                <div class="blog__content-text">
+                                    <p>What is traffic arbitrage and does it really make money?</p>
+                                    <span>Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin
+                                        dignissim lacus, purus gravida...</span>
+                                    <a href="#">
+                                        <div class="directions__link-btn">Listen</div>
+                                    </a>
+                                </div>
                             </div>
-                            <div class="blog__article">
+                            <div class="blog__podcast">
                                 <img src="images/blog/3.jpg" alt="">
+                                <ul class="blog__captions">
+                                    <li>Design</li>
+                                    <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <line x1="0.5" y1="2" x2="0.5" y2="13" stroke="#787A80"
+                                                stroke-linecap="round" />
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M17.0002 0.333984C17.3684 0.333984 17.6668 0.632461 17.6668 1.00065V1.33399L22.3335 1.334V1.00065C22.3335 0.632462 22.632 0.333985 23.0002 0.333984C23.3684 0.333984 23.6668 0.632461 23.6668 1.00065V1.334L24.5002 1.33401C25.9729 1.33401 27.1668 2.52792 27.1668 4.00067V12.0006C27.1668 13.4734 25.9729 14.6673 24.5002 14.6673L15.5002 14.6673C14.0274 14.6673 12.8335 13.4734 12.8335 12.0007L12.8335 5.50078L12.8335 4.00065C12.8335 2.52789 14.0274 1.33398 15.5002 1.33399L16.3335 1.33399V1.00065C16.3335 0.632461 16.632 0.333984 17.0002 0.333984ZM16.3335 2.66732L15.5002 2.66732C14.7638 2.66732 14.1668 3.26427 14.1668 4.00065V4.83398H25.8335V4.00067C25.8335 3.26429 25.2365 2.66734 24.5002 2.66734L23.6668 2.66734V3.00065C23.6668 3.36884 23.3684 3.66732 23.0002 3.66732C22.632 3.66732 22.3335 3.36884 22.3335 3.00065V2.66734L17.6668 2.66733V3.00065C17.6668 3.36884 17.3684 3.66732 17.0002 3.66732C16.632 3.66732 16.3335 3.36884 16.3335 3.00065V2.66732ZM25.8335 6.16732H14.1668L14.1668 12.0007C14.1668 12.737 14.7638 13.334 15.5002 13.334L24.5002 13.334C25.2365 13.334 25.8335 12.737 25.8335 12.0006V6.16732Z"
+                                                fill="#787A80" />
+                                        </svg>
+                                    </li>
 
-
+                                    <li class="blog__captions-data">August 8, 2020</li>
+                                   
+                                </ul>
+                                <div class="blog__content-text">
+                                    <p>What is traffic arbitrage and does it really make money?</p>
+                                    <span>Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis proin
+                                        dignissim lacus, purus gravida...</span>
+                                    <a href="#">
+                                        <div class="directions__link-btn">Listen</div>
+                                    </a>
+                                </div>
                             </div>
+
+
                         </div>
 
         </main>
