--- a/createx/index.html
+++ b/createx/index.html
@@ -1060,7 +1060,13 @@
                         </div>
                         <div class="blog__content">
                             <div class="blog__podcast">
-                                <img src="images/blog/1.jpg" alt="">
+                                <div class="blog__content-image-box">
+                                    <img class="blog__image-content" src="images/blog/2.jpg" alt="">
+                                    <img class="blog__image-icon" src="images/icons/video.svg" alt="">
+
+                                </div>
+
+
                                 <ul class="blog__captions">
                                     <li>Marketing</li>
                                     <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
@@ -1099,8 +1105,11 @@
                                 </div>
                             </div>
                             <div class="blog__podcast">
-                                <img src="images/blog/2.jpg" alt="">
-                                
+                                <div class="blog__content-image-box">
+                                    <img class="blog__image-content" src="images/blog/3.jpg" alt="">
+                                    <img class="blog__image-icon" src="images/icons/article.svg" alt="">
+
+                                </div>
                                 <ul class="blog__captions">
                                     <li>Management</li>
                                     <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
@@ -1139,7 +1148,11 @@
                                 </div>
                             </div>
                             <div class="blog__podcast">
-                                <img src="images/blog/3.jpg" alt="">
+                                <div class="blog__content-image-box">
+                                    <img class="blog__image-content" src="images/blog/1.jpg" alt="">
+                                    <img class="blog__image-icon" src="images/icons/podcast.svg" alt="">
+
+                                </div>
                                 <ul class="blog__captions">
                                     <li>Design</li>
                                     <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
@@ -1153,7 +1166,7 @@
                                     </li>
 
                                     <li class="blog__captions-data">August 8, 2020</li>
-                                   
+
                                 </ul>
                                 <div class="blog__content-text">
                                     <p>What is traffic arbitrage and does it really make money?</p>
