--- a/createx/index.html
+++ b/createx/index.html
@@ -1292,13 +1292,15 @@
                 </dvv>
             </section>
 
-            <section class="main__form contact-form">
+            <section class="main__form form">
                 <div class="container">
                     <div class="form__inner">
 
                         <div class="form__image-box">
                             <img src="images/form-img.svg" alt="">
                         </div>
+                        
+                        <div class="form__wrapper">
                         <div class="form__heading heading">
                             <p class="heading__subtitle">Any questions?</p>
                             <h2 class="heading__title">
@@ -1332,9 +1334,6 @@
                                     placeholder="Your phone number" value="itchief">
                             </div>
 
-
-
-
                             <div class="form__item">
                                 <label class="form__item-label" for="message">Message*</label>
                                 <textarea class="form__input-message" name="message" id="message" cols="30" rows="10"
@@ -1342,22 +1341,33 @@
                             </div>
 
 
+                            <div class="form__agree">
+                                <div class="form__item-checkbox">
+                                    <input class="form__item-check" type="checkbox" id="checkbox" name="checkbox"
+                                        value="yes">
+                                    <label class="form__item-chek-label" for="checkbox">I agree to receive
+                                        communications from Createx Online School</label>
+                                </div>
 
-                            <div class="form__item">
-                                <input class="form__item-checkbox" type="checkbox" id="checkbox" name="checkbox" value="yes"> I agree to receive communications from Createx Online School                             
 
                                 <div class="form__btn-box">
                                     <a class="form__btn button" href="#">Send message</a>
                                 </div>
-
-
                             </div>
-                            
                         </div>
-
+                    </div>
 
                     </div>
+
+
+
+
                 </div>
+
+
+
+
+
             </section>
 
         </main>
