--- a/createx/index.html
+++ b/createx/index.html
@@ -1299,70 +1299,81 @@
                         <div class="form__image-box">
                             <img src="images/form-img.svg" alt="">
                         </div>
-                        
+
                         <div class="form__wrapper">
-                        <div class="form__heading heading">
-                            <p class="heading__subtitle">Any questions?</p>
-                            <h2 class="heading__title">
-                                Drop us a line
-                            </h2>
-                        </div>
-                        <div class="form__input">
-
-
-                            <div class="form__item">
-                                <label class="form__item-label" for="login">First Name*</label>
-                                <input class="form__item-input" type="text" name="login" id="login"
-                                    placeholder="Your first name" value="itchief">
+                            <div class="form__heading heading">
+                                <p class="heading__subtitle">Any questions?</p>
+                                <h2 class="heading__title">
+                                    Drop us a line
+                                </h2>
                             </div>
+                            <div class="form__input">
 
-                            <div class="form__item">
-                                <label class="form__item-label" for="login">Last Name*</label>
-                                <input class="form__item-input" type="text" name="login" id="login"
-                                    placeholder="Your last name" value="itchief">
-                            </div>
-
-                            <div class="form__item">
-                                <label class="form__item-label" for="login">Email*</label>
-                                <input class="form__item-input" type="text" name="login" id="login"
-                                    placeholder="Your working email" value="itchief">
-                            </div>
-
-                            <div class="form__item">
-                                <label class="form__item-label" for="login">Phone</label>
-                                <input class="form__item-input" type="text" name="login" id="login"
-                                    placeholder="Your phone number" value="itchief">
-                            </div>
-
-                            <div class="form__item">
-                                <label class="form__item-label" for="message">Message*</label>
-                                <textarea class="form__input-message" name="message" id="message" cols="30" rows="10"
-                                    placeholder="Your message" prequired></textarea>
-                            </div>
-
-
-                            <div class="form__agree">
-                                <div class="form__item-checkbox">
-                                    <input class="form__item-check" type="checkbox" id="checkbox" name="checkbox"
-                                        value="yes">
-                                    <label class="form__item-chek-label" for="checkbox">I agree to receive
-                                        communications from Createx Online School</label>
+                                <div class="form__item">
+                                    <label class="form__item-label" for="login">First Name*</label>
+                                    <input class="form__item-input" type="text" name="login" id="login"
+                                        placeholder="Your first name">
                                 </div>
 
+                                <div class="form__item">
+                                    <label class="form__item-label" for="login">Last Name*</label>
+                                    <input class="form__item-input" type="text" name="login" id="login"
+                                        placeholder="Your last name">
+                                </div>
 
-                                <div class="form__btn-box">
-                                    <a class="form__btn button" href="#">Send message</a>
+                                <div class="form__item">
+                                    <label class="form__item-label" for="email">Email*</label>
+                                    <input class="form__item-input" type="email" id="email"
+                                        placeholder="Your working email">
+                                </div>
+
+                                <div class="form__item">
+                                    <label class="form__item-label" for="phone">Phone</label>
+                                    <input class="form__item-input" type="tel" name="phone" id="phone" placeholder="Your phone number">
+                                </div>
+
+                                <div class="form__item">
+                                    <label class="form__item-label" for="message">Message*</label>
+                                    <textarea class="form__input-message" name="message" id="message" cols="30" rows="10" placeholder="Your message" prequired></textarea>
+                                </div>
+
+                                <div class="form__agree">
+
+                                    <div class="form__item-checkbox">
+                                        <label class="control control-checkbox">
+                                            I agree to receive
+                                            communications from Createx Online School
+                                            <input type="checkbox" checked="checked" />
+                                            <div class="control_indicator"></div>
+                                        </label>
+
+                                    </div>
+                                    <div class="form__btn-box">
+                                        <a class="form__btn button" href="#">Send message</a>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
-                    </div>
+
+
+
+
+
+
+
+
+
 
                     </div>
+
 
 
 
 
                 </div>
+
+
 
 
 
