--- a/createx/index.html
+++ b/createx/index.html
@@ -1312,29 +1312,29 @@
                                 <div class="form__item">
                                     <label class="form__item-label" for="login">First Name*</label>
                                     <input class="form__item-input" type="text" name="login" id="login"
-                                        placeholder="Your first name">
+                                        placeholder="Your first name" required>
                                 </div>
 
                                 <div class="form__item">
                                     <label class="form__item-label" for="login">Last Name*</label>
                                     <input class="form__item-input" type="text" name="login" id="login"
-                                        placeholder="Your last name">
+                                        placeholder="Your last name" required>
                                 </div>
 
                                 <div class="form__item">
                                     <label class="form__item-label" for="email">Email*</label>
                                     <input class="form__item-input" type="email" id="email"
-                                        placeholder="Your working email">
+                                        placeholder="Your working email" required>
                                 </div>
 
                                 <div class="form__item">
                                     <label class="form__item-label" for="phone">Phone</label>
-                                    <input class="form__item-input" type="tel" name="phone" id="phone" placeholder="Your phone number">
+                                    <input class="form__item-input" type="tel" name="phone" id="phone" placeholder="Your phone number" required>
                                 </div>
 
                                 <div class="form__item">
                                     <label class="form__item-label" for="message">Message*</label>
-                                    <textarea class="form__input-message" name="message" id="message" cols="30" rows="10" placeholder="Your message" prequired></textarea>
+                                    <textarea class="form__input-message" name="message" id="message" cols="30" rows="10" placeholder="Your message" required></textarea>
                                 </div>
 
                                 <div class="form__agree">
@@ -1343,13 +1343,13 @@
                                         <label class="control control-checkbox">
                                             I agree to receive
                                             communications from Createx Online School
-                                            <input type="checkbox" checked="checked" />
+                                            <input type="checkbox" checked="checked" required />
                                             <div class="control_indicator"></div>
                                         </label>
 
                                     </div>
                                     <div class="form__btn-box">
-                                        <a class="form__btn button" href="#">Send message</a>
+                                        <button type="submit" class="form__btn button" href="#">Send message</button>
                                     </div>
 
                                 </div>
