start working on footer

--- a/createx/index.html
+++ b/createx/index.html
@@ -1384,7 +1384,31 @@
         </main>
 
 
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer__top">
+                <div class="container">
+                    <div class="footer__top-inner">
+                        <a class="footer__logo logo" href="#">
+                            <img src="images/logo-light.svg" alt="Logo" />
+                        </a>
+                    </div>
+
+
+
+                </div>
+            </div>
+
+           
+               
+                            <div class="contact__heading heading">
+                                <p class="heading__subtitle">Contact info</p>
+                                <h2 class="heading__title">
+                                    Get in touch
+                                </h2>
+                            </div>
+
+
+        </footer>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
