--- a/createx/index.html
+++ b/createx/index.html
@@ -1467,7 +1467,9 @@
                             <div class="footer__site-map">
 
                                 <ul class="footer__site-map-items">
-                                    <li><span>SITE MAP</span></li>
+                                    <li>
+                                        <h2 class="test">SITE MAP</h2>
+                                    </li>
                                     <li><a href="#">About Us</a></li>
                                     <li><a href="#">Courses</a></li>
                                     <li><a href="#">Events</a></li>
@@ -1479,7 +1481,9 @@
 
                             <div class="footer__cources">
                                 <ul class="footer__cources-items">
-                                    <li><span>COURSES</span></li>
+                                    <li>
+                                        <h2>COURSES</h2>
+                                    </li>
                                     <li><a href="#">Marketing</a></li>
                                     <li><a href="#">Management</a></li>
                                     <li><a href="#">HR & Recruting</a></li>
@@ -1492,12 +1496,45 @@
 
                             <div class="footer__contacts">
                                 <ul class="footer__contacts-items">
-                                    <li><span>CONTACT US</span></li>
-                                    <li><a class="footer__contacts-phone" href="tel:+74055550128">(405) 555-0128</a>
+                                    <li>
+                                        <h2>CONTACT US</h2>
                                     </li>
-                                    <li><a class="footer__contacts-mail" href="mailto:example@mail.ru">hello@createx.com</a></li>
+                                    <li><a class="footer__contacts-item" href="tel:+74055550128"><svg width="16"
+                                                height="16" viewBox="0 0 16 16" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                    d="M5.66683 1.94857C5.11454 1.94857 4.66683 2.39628 4.66683 2.94857V13.0527C4.66683 13.605 5.11454 14.0527 5.66683 14.0527H10.3335C10.8858 14.0527 11.3335 13.605 11.3335 13.0527V2.94857C11.3335 2.39628 10.8858 1.94857 10.3335 1.94857H10.2779L10.1155 2.3382C10.012 2.58661 9.76928 2.74842 9.50016 2.74842H6.50016C6.23105 2.74842 5.98832 2.58661 5.8848 2.3382L5.72242 1.94857H5.66683ZM3.3335 2.94857C3.3335 1.6599 4.37817 0.615234 5.66683 0.615234H10.3335C11.6222 0.615234 12.6668 1.6599 12.6668 2.94857V13.0527C12.6668 14.3414 11.6222 15.3861 10.3335 15.3861H5.66683C4.37816 15.3861 3.3335 14.3414 3.3335 13.0527V2.94857Z"
+                                                    fill="white" />
+                                            </svg><span class="footer__contacts-icon">(405) 555-0128</span></a></li>
+                                    <li><a class="footer__contacts-item" href="mailto:example@mail.ru"><svg width="16"
+                                                height="16" viewBox="0 0 16 16" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                    d="M15.1668 11.9993V4.66602C15.1668 3.56145 14.2714 2.66602 13.1668 2.66602L2.83349 2.66603C1.72893 2.66603 0.833496 3.56146 0.833496 4.66603V11.9993C0.833496 13.1039 1.72893 13.9993 2.8335 13.9993L13.1668 13.9993C14.2714 13.9993 15.1668 13.1039 15.1668 11.9993ZM13.8335 6.17232V11.9993C13.8335 12.3675 13.535 12.666 13.1668 12.666L2.8335 12.666C2.46531 12.666 2.16683 12.3675 2.16683 11.9993L2.16683 6.17223L6.87561 9.3742C7.55433 9.83573 8.44613 9.83573 9.12485 9.3742L13.8335 6.17232ZM13.8259 4.56509C13.7773 4.24479 13.5007 3.99935 13.1668 3.99935L2.83349 3.99936C2.49965 3.99936 2.22311 4.24476 2.17443 4.56501L7.62535 8.27164C7.85159 8.42548 8.14886 8.42548 8.3751 8.27164L13.8259 4.56509Z"
+                                                    fill="white" />
+                                            </svg>
+                                            <span class="footer__contacts-icon">hello@createx.com</span></a></li>
+
                                 </ul>
                             </div>
+
+
+                            <div class="footer__sign">
+                                <ul class="footer__sign-items">
+                                    <li>
+                                        <h2>SIGN UP TO OUR NEWSLETTER</h2>
+                                    </li>
+                                   
+                                        <input class="footer__field" type="email" id="email" pattern=".+@example\.com" size="30" placeholder="Email address" required />
+                                    
+                                    <p>*Subscribe to our newsletter to receive communications and early updates from
+                                        Createx SEO Agency.</p>
+
+                                </ul>
+                            </div>
+
+
+
                         </div>
 
 
